; ModuleID = '/home/carl/AnghaBench/tig/src/extr_display.c_done_display.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_display.c_done_display.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32* }

@cursed = common dso_local global i32 0, align 4
@status_win = common dso_local global i64 0, align 8
@opt_tty = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@TCSAFLUSH = common dso_local global i32 0, align 4
@SIGTTOU = common dso_local global i32 0, align 4
@SIG_IGN = common dso_local global i32 0, align 4
@SIG_DFL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @done_display to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @done_display() #0 {
  %1 = load i32, i32* @cursed, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %13

3:                                                ; preds = %0
  %4 = load i64, i64* @status_win, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %3
  %7 = load i64, i64* @status_win, align 8
  %8 = call i32 @werase(i64 %7)
  %9 = call i32 (...) @doupdate()
  br label %10

10:                                               ; preds = %6, %3
  %11 = call i32 @curs_set(i32 1)
  %12 = call i32 (...) @endwin()
  br label %13

13:                                               ; preds = %10, %0
  store i32 0, i32* @cursed, align 4
  %14 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @opt_tty, i32 0, i32 2), align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %23

16:                                               ; preds = %13
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @opt_tty, i32 0, i32 1), align 4
  %18 = load i32, i32* @TCSAFLUSH, align 4
  %19 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @opt_tty, i32 0, i32 2), align 8
  %20 = call i32 @tcsetattr(i32 %17, i32 %18, i32* %19)
  %21 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @opt_tty, i32 0, i32 2), align 8
  %22 = call i32 @free(i32* %21)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @opt_tty, i32 0, i32 2), align 8
  br label %23

23:                                               ; preds = %16, %13
  %24 = load i32, i32* @SIGTTOU, align 4
  %25 = load i32, i32* @SIG_IGN, align 4
  %26 = call i32 @signal(i32 %24, i32 %25)
  %27 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @opt_tty, i32 0, i32 1), align 4
  %28 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @opt_tty, i32 0, i32 0), align 8
  %29 = call i32 @tcsetpgrp(i32 %27, i32 %28)
  %30 = load i32, i32* @SIGTTOU, align 4
  %31 = load i32, i32* @SIG_DFL, align 4
  %32 = call i32 @signal(i32 %30, i32 %31)
  ret void
}

declare dso_local i32 @werase(i64) #1

declare dso_local i32 @doupdate(...) #1

declare dso_local i32 @curs_set(i32) #1

declare dso_local i32 @endwin(...) #1

declare dso_local i32 @tcsetattr(i32, i32, i32*) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @signal(i32, i32) #1

declare dso_local i32 @tcsetpgrp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
